Update DOC